--- a/readme.html
+++ b/readme.html
@@ -1,5 +1,5 @@
 <!-- File: readme.html
-  Copyright (c) 2019 Splunk Inc.
+  Copyright (c) 2019-2020 Splunk Inc.
 
   Licensed under Apache 2.0 (https://www.apache.org/licenses/LICENSE-2.0.txt)
 -->
@@ -7,63 +7,126 @@
 <html>
 <head></head>
 <body>
-<h2>Authentication</h2>
-This app requires creating a Microsoft Azure Application. To do so, navigate to <a href="https://portal.azure.com">https://portal.azure.com</a> in a browser and log in with a Microsoft account, then select <b>Azure Active Directory</b>.
-<br>
-<ol>
-  <li>Go to <b>App Registrations</b> and click on <b>+ New Application Registration</b>.</li>
-	<li>Give an appropriate name and provide a sign-on URL.</li>
-  <li>Select an app.</li>
-  <li>Go to <b>App Settings</b> → <b>API Permissions</b> and click on <b>App Name</b> → Select Permission Type.</li>
-	<li>The following Delegated and Application Permissions need to be added to the App:
+    <h2>
+      Configuring SIEM Integration on Windows Defender ATP
+    </h2>
+    <p>
+      <h3>Prerequisites</h3>
       <ul>
-        <b>Application Permissions</b>
-          <ul>
-            <li>Alert.ReadWrite.All</li>
-            <li>File.Read.All</li>
-            <li>Machine.Isolate</li>
-            <li>Machine.Offboard</li>
-            <li>Machine.Read.All</li>
-            <li>Machine.ReadWrite.All</li>
-            <li>Machine.RestrictExecution</li>
-            <li>Machine.Scan</li>
-            <li>Machine.StopAndQuarantine</li>
-            <li>User.Read.All</li>
-          </ul>
+        <li>The user who activates the setting must have permission to create an app in Azure Active Directory (AAD).</li>
+        <li>During the initial activation, a pop-up screen is displayed for credentials to be entered. Make sure that you allow pop-ups for this site.</li>
       </ul>
+      <h3>Steps</h3>
+      <ol>
+        <li>Login to <b>Windows Defender Center</b>.</li>
+        <li>In the navigation pane, select <b>Settings > SIEM</b>.</li>
+        <li>Select <b>Enable SIEM connector</b>.(This activates the SIEM connector access details section with pre-populated values and an application is created under your Azure Active Directory (AAD) tenant.)
+        </li>
+        <li>Choose the SIEM type -> <b>Generic API</b></li>
+        <li>Copy the individual values or select <b>Save details to file</b> to download a file that contains all the values. (This details would be required to run connectivity)</li>
+        <li> After enabling the SIEM connector on the Defender ATP center, the App <b>'WindowsDefenderATPSiemConnector'</b> will be created on the Azure portal.</li>
+      </ol>
+    </p>
+
+    <h2>
+      Below are the steps to set further configuration and permissions on the Azure portal
+    </h2>
+    <p>
+      <ol>
+        <li>Navigate to <b><a href="https://portal.azure.com" target="_blank">https://portal.azure.com</a></b> in a browser.</li>
+        <li>Log in with the user which was used to enable the SIEM integration.</li>
+        <li>Select <b>Azure Active Directory</b>.</li>
+        <li>Select <b>App registrations</b> menu from the left-side panel.</li>
+        <li>Select <b>WindowsDefenderATPSiemConnector</b> app.</li>
+        <li>Go to <b>API Permissions</b>.</li>
+        <li>Click on <b>Add a permission</b></li>
+        <li>Under a Select an API, select <b>APIs my organization</b>.</li>
+        <li>Search for <b>WindowsDefenderATP</b>, select it.</li>
+        <li>Give the following Delegated and Application Permissions to the App
+          <ul>
+            <b>Application Permissions</b>
+              <ul>
+                <li>Alert.ReadWrite.All</li>
+                <li>File.Read.All</li>
+                <li>Machine.Isolate</li>
+                <li>Machine.Offboard</li>
+                <li>Machine.Read.All</li>
+                <li>Machine.ReadWrite.All</li>
+                <li>Machine.RestrictExecution</li>
+                <li>Machine.Scan</li>
+                <li>Machine.StopAndQuarantine</li>
+                <li>User.Read.All</li>
+              </ul>
+          </ul>
+          <ul>
+            <b>Deligated Permissions</b>
+              <ul>
+                <li>Alert.ReadWrite</li>
+                <li>File.Read.All</li>
+                <li>Machine.Isolate</li>
+                <li>Machine.Offboard</li>
+                <li>Machine.Read</li>
+                <li>Machine.ReadWrite</li>
+                <li>Machine.RestrictExecution</li>
+                <li>Machine.Scan</li>
+                <li>Machine.StopAndQuarantine</li>
+                <li>User.Read.All</li>
+              </ul>
+          </ul>
+        </li>
+        <li><b>Grant Admin Consent</b> for it.</li>
+      </ol>
+    </p>
+
+    <h2>Phantom Graph Asset</h2>
+      When creating an asset for the <b>Windows Defender ATP</b> app,
       <ul>
-        <b>Deligated Permissions</b>
+        <li>Place the <b>Client ID</b> of the app created during the previous step of SIEM Integration in the <b>Client ID</b> field.</li>
+        <li>Place the <b>Client Secret</b> of the app created during the previous step of SIEM Integration in the <b>Client Secret</b> field. If the client secret is not generated during SIEM step, follow the below step to generate the new client secret.
           <ul>
-            <li>Alert.ReadWrite</li>
-            <li>File.Read.All</li>
-            <li>Machine.Isolate</li>
-            <li>Machine.Offboard</li>
-            <li>Machine.Read</li>
-            <li>Machine.ReadWrite</li>
-            <li>Machine.RestrictExecution</li>
-            <li>Machine.Scan</li>
-            <li>Machine.StopAndQuarantine</li>
-            <li>User.Read.All</li>
+            <li>Navigate to <b><a href="https://portal.azure.com" target="_blank">https://portal.azure.com</a></b> in a browser.</li>
+            <li>Log in with the user which was used to enable the SIEM integration.</li>
+            <li>Select <b>Azure Active Directory</b>.</li>
+            <li>Select <b>App registrations</b> menu from the left-side panel.</li>
+            <li>Select <b>WindowsDefenderATPSiemConnector</b> app.</li>
+            <li>Under <b>Certificates & secrets</b>, add <b>New client secret</b>. Note this key somewhere secure, as it cannot be retrieved after closing the window.</li>
+            <li>Place the newly generated <b>Client Secret</b> in the <b>Client Secret</b> field of an asset.</li>
           </ul>
+        </li>
+        <li>For Tenant ID, Go to <b>Azure Active Directory</b>, under the <b>App registrations</b> menu from the left-side panel, select <b>WindowsDefenderATPSiemConnector</b> app. Here, you get the <b>Tenant ID</b> of the application.</li>
       </ul>
-  </li>
-</ol>
-<h2>Phantom Graph Asset</h2>
-When creating an asset for the <b>Windows Defender ATP</b> app, place <b>Application Id</b> of the app created during the previous step in the <b>Client ID</b> field and the tenant ID (ID of the active directory) in the <b>Tenant ID</b> field, click <b>SAVE</b>.
-<br>
-For Tenant ID, Go to <b>Azure Active Directory</b> → <b>Properties</b> and copy the <b>Directory ID</b>.
-<br>
-After saving, a new field will appear in the <b>Asset Settings</b> tab. Take the URL found in the <b>POST incoming for Windows Defender ATP to this location</b> field and place it in the <b>App Settings → Redirect URIs</b> field of your registered app. To this URL, add <b>/result</b>. After doing so the URL should look something like:
-<br><br>
-<pre>
-https://&lt;phantom_host&gt;/rest/handler/windowsdefenderatp_e85407b7-91f0-4019-8fa4-0d29bca741d5/&lt;asset_name&gt;/result
-</pre>
-<br>
-Once again, click save.
-<br>
-<h2>Method to run test connectivity</h2>
-After setting up the asset and user, click the <b>TEST CONNECTIVITY</b> button. A window should pop up and display a URL. Navigate to this URL in a separate browser tab. This new tab will redirect to a Microsoft login page. Log in to a Microsoft account. After logging in, review the requested permissions listed, then click <b>Accept</b>. Finally, close that tab. The test connectivity window should show success message.
-<br><br>
+
+      <br>
+      After saving, a new field will appear in the <b>Asset Settings</b> tab. Take the URL found in the <b>POST incoming for Windows Defender ATP to this location</b> field. To this URL, add <b>/result</b>. After doing so the URL should look something like:
+      <br>
+      <pre>
+      https://&lt;phantom_host&gt;/rest/handler/windowsdefenderatp_&lt;appid&gt;/&lt;asset_name&gt;/result
+      </pre>
+      Add this <b>Redirect URI</b> into the Redirect URIs section of the registered app. You can find this section under the <b>Authentication</b> menu of the <b>WindowsDefenderATPSiemConnector</b> app on the azure portal.
+      <br>
+    </p>
+
+    <h2>Method to run test connectivity</h2>
+      After setting up the asset and user, click the <b>TEST CONNECTIVITY</b> button. A window should pop up and display a URL. Navigate to this URL in a separate browser tab. This new tab will redirect to a Microsoft login page. Log in to a Microsoft account. After logging in, review the requested permissions listed, then click <b>Accept</b>. Finally, close that tab. The test connectivity window should show success message.
+      <br><br>
+
+    <h2>State File Permissions</h2>
+      Please check the permissions for the state file as mentioned below.
+      <h4>State Filepath</h4>
+      <ul>
+        <li>For Non-NRI Instance: /opt/phantom/local_data/app_states/&lt;appid&gt;/&lt;asset_id&gt;_state.json</li>
+        <li>For NRI Instance: /&lt;PHANTOM_HOME_DIRECTORY&gt;/local_data/app_states/&lt;appid&gt;/&lt;asset_id&gt;_state.json</li>
+      </ul>
+      <h4>State File Permissions</h4>
+      <ul>
+        <li>File Rights: rw-rw-r-- (664) (The phantom user should have read and write access for the state file)</li>
+        <li>File Owner: appropriate phantom user</li>
+      </ul>
+      <h4>Notes</h4>
+      <ul>
+        <li>appid - The app ID will be available in Redirect URI which will populated when asset is configured e.g. https://&lt;phantom_host&gt;/rest/handler/windowsdefenderatp_&lt;appid&gt;/&lt;asset_name&gt;/result</li>
+        <li>asset_id - The asset ID will be available on the creted asset URL e.g. https://&lt;phantom_host&gt;/apps/&lt;app_number&gt;/asset/&lt;asset_id&gt;/</li>
+      </ul>
 The app should now be ready to be used.
 </body>
 </html>
