Windows Defender ATP - Commit for the pagination implementation removal as the Defender ATP APIs do not suport that and adding the same in README file.

--- a/readme.html
+++ b/readme.html
@@ -26,6 +26,18 @@
         </ul>
       </p>
 
+    <h2>Pagination Not Supported</h2>
+      <p>
+        <ul>
+          <li>Based on the base URL link (<a href="https://docs.microsoft.com/en-us/windows/security/threat-protection/microsoft-defender-atp/exposed-apis-list" target="_blank">Microsoft Defender ATP API Documentation</a>), the pagination is not supported by the Defender ATP APIs. Hence, this app does not implement the pagination for the below-mentioned actions.</li>
+          <ul>
+            <li>List Devices</li>
+            <li>List Alerts</li>
+            <li>List Sessions</li>
+          </ul>
+        </ul>
+      </p>
+
     <h2>Explanation of Asset Configuration Parameters</h2>
       <p>
         <ul>
