--- a/readme.html
+++ b/readme.html
@@ -11,8 +11,7 @@
     <h2>Defender ATP Instance Minimum Version Compatibility</h2>
       <p>
         <ul>
-          <li>With this version of the Windows Defender ATP app on Phantom, we declare support for the ATP instances which are on and above the . This app has been tested and certified on the  version of the Defender ATP.</li>
-          <li>The expectations of the actions with this version of the app have not been changed majorly. It is recommended to read the documentation for the app and each action first to understand the functioning of the actions of all the asset configuration and the action parameters.</li>
+          <li>With this major version 2.0.0 of the Windows Defender ATP app on Phantom, we declare support for (on and above) the cloud 'November-December 2019' GA release for the ATP instances. This app has been tested and certified on the mentioned GA release of the Defender ATP and its APIs.</li>
         </ul>
       </p>
 
@@ -41,13 +40,13 @@
     <h2>Explanation of Asset Configuration Parameters</h2>
       <p>
         <ul>
-          <li>tenant_id - It is the Directory ID of the Microsoft Azure Active Directory on the Microsoft Azure portal.</li>
-          <li>client_id - It is the Application ID of an application configured in the Microsoft Azure Active Directory.</li>
-          <li>client_secret - It is the secret string used by the application to prove its identity when requesting a token. It can be generated for the configured application on the Microsoft Azure Active Directory.</li>
+          <li>Tenant ID - It is the Directory ID of the Microsoft Azure Active Directory on the Microsoft Azure portal.</li>
+          <li>Client ID - It is the Application ID of an application configured in the Microsoft Azure Active Directory.</li>
+          <li>Client Secret - It is the secret string used by the application to prove its identity when requesting a token. It can be generated for the configured application on the Microsoft Azure Active Directory.</li>
         </ul>
       </p>
 
-    <h2>Configuring SIEM Integration on Microsoft Defender Security Center</h2>
+    <h2>Configure SIEM Integration on the Microsoft Defender Security Center</h2>
       <ul>
         <li>
           <h3>SIEM Integration Configuration Link</h3>
@@ -58,7 +57,7 @@
         <li>
           <h3>Prerequisites</h3>
             <ul>
-              <li>The user who activates the setting must have permission to create an app in Azure Active Directory (AAD).</li>
+              <li>The user who activates the setting must have permission to create an app in the Azure Active Directory (AAD).</li>
               <li>During the initial activation, a pop-up screen is displayed for credentials to be entered. Make sure that you allow pop-ups for this site.</li>
             </ul>
         </li>
@@ -70,12 +69,12 @@
               <li>Select 'Enable SIEM connector' (this activates the SIEM connector access details section with pre-populated values and an application is created under your Azure Active Directory (AAD) tenant).</li>
               <li>In the 'Choose the SIEM you want to configure and download details to file' section, select the 'Generic API' option.</li>
               <li>Copy the individual pre-populated values displayed on the screen or click the 'Save details to file' button to download a file that contains all these values (these details are required to run the 'Test Connectivity' action).</li>
-              <li> After enabling the SIEM connector on the Microsoft Defender Security Center, the App 'WindowsDefenderATPSiemConnector' will be created on the Azure portal.</li>
+              <li> After enabling the SIEM connector on the Microsoft Defender Security Center, the app 'WindowsDefenderATPSiemConnector' will be created on the Microsoft Azure portal.</li>
             </ol>
         </li>
       </ul>
 
-    <h2>Steps to configure and set up permissions on the Microsoft Azure portal</h2>
+    <h2>Configure and set up permissions of the app created on the Microsoft Azure portal</h2>
       <p>
         <ol>
           <li>Navigate to <a href="https://portal.azure.com" target="_blank">https://portal.azure.com</a>.</li>
@@ -120,7 +119,7 @@
           <li>'Grant Admin Consent' for it.</li>
           <li>Again click on 'Add a permission'.</li>
           <li>Under the 'Select an API' section, select 'Microsoft APIs'.</li>
-          <li>Click on 'Microsoft Graph' option.</li>
+          <li>Click on the 'Microsoft Graph' option.</li>
           <li>Provide the following Delegated permission to the app.
             <ul>
               <li><b>Deligated Permission</b></li>
@@ -132,7 +131,7 @@
         </ol>
       </p>
 
-    <h2>Configure Microsoft Defender ATP Asset</h2>
+    <h2>Configure the Microsoft Defender ATP Phantom app's asset</h2>
       <p>
         When creating an asset for the app,
         <ul>
@@ -145,28 +144,41 @@
               <li>Select the 'App registrations' menu from the left-side panel.</li>
               <li>Select the 'WindowsDefenderATPSiemConnector' app.</li>
               <li>Click on the 'Certificates &amp; secrets' menu on the left-side panel.</li>
-              <li>Click on 'New client secret' button to open a pop-up window.</li>
-              <li>Provide the description, select an appropriate option for deciding the client secret expiration time, and click on 'Add' button to open a pop-up window.</li>
+              <li>Click on the 'New client secret' button to open a pop-up window.</li>
+              <li>Provide the description, select an appropriate option for deciding the client secret expiration time, and click on the 'Add' button to open a pop-up window.</li>
               <li>Please save this client secret string displayed on the pop-up window to some secure place, as it cannot be retrieved after closing the pop-up window.</li>
               <li>Provide the newly generated client secret string in the 'Client Secret' field of the asset.</li>
             </ul>
           </li>
           <li>Provide the tenant ID of the app created during the previous step of SIEM Integration in the 'Tenant ID' field. For getting the value of tenant ID, navigate to the 'Azure Active Directory' on the Microsoft Azure portal; click on the 'App registrations' menu from the left-side panel; click on the earlier created 'WindowsDefenderATPSiemConnector' app. The value displayed in the 'Directory (tenant) ID' is the required tenant ID.</li>
+          <li>Save the asset with the above values.</li>
+          <li>After saving the asset, a new uneditable field will appear in the 'Asset Settings' tab of the configured asset for the ATP app on Phantom. Copy the URL mentioned in the 'POST incoming for Windows Defender ATP to this location' field. Add a suffix '/result' to the URL copied in the previous step. The resulting URL looks like the one mentioned below.</li>
+          <pre>
+            https://&lt;phantom_host&gt;/rest/handler/windowsdefenderatp_&lt;appid&gt;/&lt;asset_name&gt;/result
+          </pre>
+          <li>Add the URL created in the earlier step into the 'Redirect URIs' section of the 'Authentication' menu for the registered app 'WindowsDefenderATPSiemConnector' on the Microsoft Azure portal. For the 'Redirect URIs' section, follow the below steps.</li>
+            <ol>
+              <li>Navigate to the 'Azure Active Directory' on the Microsoft Azure portal.</li>
+              <li>Click on the 'App registrations' menu from the left-side panel.</li>
+              <li>Click on the earlier created 'WindowsDefenderATPSiemConnector' app.</li>
+              <li>Navigate to the 'Authentication' menu of the app on the left-side panel.</li>
+              <li>Click on the 'Add a platform' button and select 'Web' from the displayed options.</li>
+              <li>Enter the URL created in the earlier section in the 'Redirect URIs' text-box.</li>
+              <li>This will display the 'Redirect URIs' under the 'Web' section displayed on the page.</li>
+            </ol>
         </ul>
-
-        <br>
-        After saving, a new uneditable field will appear in the 'Asset Settings' tab of the configured asset for the ATP app on Phantom. Copy the URL mentioned in the 'POST incoming for Windows Defender ATP to this location' field. Add a suffix '/result' to the URL copied in the previous step. The resulting URL looks like the one mentioned below.
-        <br>
-        <pre>
-        https://&lt;phantom_host&gt;/rest/handler/windowsdefenderatp_&lt;appid&gt;/&lt;asset_name&gt;/result
-        </pre>
-        Add the URL created in the earlier step into the 'Redirect URIs' section of the 'Authentication' menu for the registered app 'WindowsDefenderATPSiemConnector' on the Microsoft Azure portal. For 'Redirect URIs' section, navigate to the 'Azure Active Directory' on the Microsoft Azure portal; click on the 'App registrations' menu from the left-side panel; click on the earlier created 'WindowsDefenderATPSiemConnector' app; navigate to the 'Authentication' menu of the app on the left-side panel; this will display the 'Redirect URIs' under the 'Web' section displayed on the page.
-        <br>
       </p>
 
-    <h2>Method to run test connectivity</h2>
-      After setting up the asset and user, click the <b>TEST CONNECTIVITY</b> button. A window should pop up and display a URL. Navigate to this URL in a separate browser tab. This new tab will redirect to a Microsoft login page. Log in to a Microsoft account. After logging in, review the requested permissions listed, then click <b>Accept</b>. Finally, close that tab. The test connectivity window should show a success message.
-      <br><br>
+    <h2>Method to run Test Connectivity</h2>
+      <p>
+        <ul>
+          <li>After setting up the asset and user, click the 'TEST CONNECTIVITY' button. A pop-up window will be displayed with appropriate test connectivity logs. It will also display a specific URL on that pop-up window.</li>
+          <li>Open this URL in a separate browser tab. This new tab will redirect to the Microsoft login page to complete the login process to grant the permissions to the app.</li>
+          <li>Log in using the same Microsoft account that was used to configure the SIEM connector workflow and the application on the Microsoft Azure Portal. After logging in, review the requested permissions listed and click on the 'Accept' button.</li>
+          <li>This will display a successful message of 'Code received. Please close this window, the action will continue to get new token.' on the browser tab.</li>
+          <li>Finally, close the browser tab and come back to the 'Test Connectivity' browser tab. The pop-up window should display a 'Test Connectivity Passed' message.</li>
+        </ul>
+      </p>
 
     <h2>Explanation of Test Connectivity Workflow</h2>
       <p>
@@ -186,23 +198,29 @@
         </ul>
       </p>
 
-    <h2>State File Permissions</h2>
-      Please check the permissions for the state file as mentioned below.
-      <h4>State Filepath</h4>
+    <h2>State file permissions</h2>
+      <p>
+        Please check the permissions for the state file as mentioned below.
+        <h4>State file path</h4>
+        <ul>
+          <li>For Non-NRI instance: /opt/phantom/local_data/app_states/&lt;appid&gt;/&lt;asset_id&gt;_state.json</li>
+          <li>For NRI instance: /&lt;PHANTOM_HOME_DIRECTORY&gt;/local_data/app_states/&lt;appid&gt;/&lt;asset_id&gt;_state.json</li>
+        </ul>
+        <h4>State file permissions</h4>
+        <ul>
+          <li>File rights: rw-rw-r-- (664) (The phantom user should have read and write access for the state file)</li>
+          <li>File owner: Appropriate phantom user</li>
+        </ul>
+      </p>
+
+    <h2>Notes</h2>
+    <p>
       <ul>
-        <li>For Non-NRI Instance: /opt/phantom/local_data/app_states/&lt;appid&gt;/&lt;asset_id&gt;_state.json</li>
-        <li>For NRI Instance: /&lt;PHANTOM_HOME_DIRECTORY&gt;/local_data/app_states/&lt;appid&gt;/&lt;asset_id&gt;_state.json</li>
+        <li>&lt;appid&gt; - The app ID will be available in the Redirect URI which gets populated in the field 'POST incoming for Windows Defender ATP to this location' when the Defender ATP Phantom app asset is configured e.g. https://&lt;phantom_host&gt;/rest/handler/windowsdefenderatp_&lt;appid&gt;/&lt;asset_name&gt;/result</li>
+        <li>&lt;asset_id&gt; - The asset ID will be available on the created asset's Phantom web URL e.g. https://&lt;phantom_host&gt;/apps/&lt;app_number&gt;/asset/&lt;asset_id&gt;/</li>
       </ul>
-      <h4>State File Permissions</h4>
-      <ul>
-        <li>File Rights: rw-rw-r-- (664) (The phantom user should have read and write access for the state file)</li>
-        <li>File Owner: appropriate phantom user</li>
-      </ul>
-      <h4>Notes</h4>
-      <ul>
-        <li>appid - The app ID will be available in Redirect URI which will populated when asset is configured e.g. https://&lt;phantom_host&gt;/rest/handler/windowsdefenderatp_&lt;appid&gt;/&lt;asset_name&gt;/result</li>
-        <li>asset_id - The asset ID will be available on the creted asset URL e.g. https://&lt;phantom_host&gt;/apps/&lt;app_number&gt;/asset/&lt;asset_id&gt;/</li>
-      </ul>
-The app should now be ready to be used.
+    </p>
+
+<h3>The app is configured and ready to be used now.</h3>
 </body>
 </html>
