--- a/readme.html
+++ b/readme.html
@@ -1,5 +1,5 @@
 <!-- File: readme.html
-  Copyright (c) 2019-2020 Splunk Inc.
+  Copyright (c) 2019-2021 Splunk Inc.
 
   Licensed under Apache 2.0 (https://www.apache.org/licenses/LICENSE-2.0.txt)
 -->
@@ -20,7 +20,8 @@
         <ul>
           <li>The existing action parameters have been modified in the actions given below. Hence, it is requested to the end-user to please update their existing playbooks by re-inserting | modifying | deleting the corresponding action blocks or by providing appropriate values to these action parameters to ensure the correct functioning of the playbooks created on the earlier versions of the app.</li>
           <ul>
-            <li>List Devices - The 'IP' option has been removed from the value list of the [input_type] action parameter because there is no specific API currently available to support the filtering of devices based on the IP in the Defender ATP.</li>
+            <li>List Devices - The 'IP' option has been removed from the value list of the [input_type] action parameter in the app version 3.0.0 because there is no specific API currently available to support the filtering of devices based on the IP in the Defender ATP.</li>
+            <li>List Devices - The new [query] parameter has been added to support the additional OData V4 filters.</li>
           </ul>
         </ul>
       </p>
